--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,34 @@
-<form [formGroup]="gameForm" novalidate>
-  <md-radio-group class="example-radio-group"
-                  formControlName="chose"
-                  color="accent">
-    <md-radio-button *ngFor="let chose of playerChoses"
-                     color="accent"
-                     class="example-radio-button"
-                     [value]="chose">
-      {{ chose }}
-    </md-radio-button>
-  </md-radio-group>
+<md-card class="playing-card">
 
-  <button md-raised-button
-          color="accent"
-          [disabled]="!gameForm.valid || thinking"
-          (click)="play()">
-    Play!
-    <md-spinner color="primary"
-                strokeWidth="8"
-                *ngIf="thinking"
-                class="loading-spinner"></md-spinner>
-  </button>
-</form>
+  <form [formGroup]="gameForm" novalidate>
+    <md-card-title>Make your move!</md-card-title>
+
+    <md-card-content>
+      <md-radio-group class="radio-group"
+                      formControlName="chose"
+                      color="accent">
+        <md-radio-button *ngFor="let chose of playerChoses"
+                         color="accent"
+                         class="radio-button"
+                         [value]="chose">
+          {{ chose }}
+        </md-radio-button>
+      </md-radio-group>
+    </md-card-content>
+
+    <md-card-actions align="end">
+      <button md-raised-button
+              color="accent"
+              [disabled]="!gameForm.valid || thinking"
+              (click)="play()">
+        Play!
+        <md-spinner color="primary"
+                    strokeWidth="8"
+                    id="loading-spinner"
+                    *ngIf="thinking"></md-spinner>
+      </button>
+    </md-card-actions>
+
+  </form>
+
+</md-card>
