test(Protractor): E2E tests improved

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,6 +19,7 @@
     <md-card-actions align="end">
       <button md-raised-button
               color="accent"
+              class="game_start"
               [disabled]="!gameForm.valid || thinking"
               (click)="play()">
         Play!
